# AsteroidesC-G

./: .gitignore  Alien.c  Animaciones.c  Asteroides.c  CMakeLists.txt  Disparos.c  EventHandler.c  Multimedia.c  Partida.c  README.md  Utils.c  Vars.c  allegro_cb.cbp  config.c  config.cfg  es_MX.cfg  nave.c  nave.h  nave_vars.h
.github/workflows/: build.yaml
