cmake_minimum_required(VERSION 3.13)
project(Asteroides)
add_executable(Nave nave.c)
target_link_libraries(Nave allegro allegro_font allegro_image allegro_primitives allegro_audio allegro_acodec allegro_ttf)
set(ASTEROIDES_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/dist/)
install(TARGETS Nave DESTINATION ${ASTEROIDES_OUTPUT_DIR})
install(DIRECTORY resources DESTINATION ${ASTEROIDES_OUTPUT_DIR})
